Implemented comparison between users

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,4 @@
-.card{
-    padding: 1.5em .5em .5em;
-    border-radius: 20;
-    text-align: center;
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+.scroll {
+    max-height: 100px;
+    overflow-y: auto;
 }
