--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,14 @@
     max-height: 100px;
     overflow-y: auto;
 }
+
+body {
+    font: Roboto;
+}
+
+.text-side-card {
+    background-color: white,
+    padding: 7px,
+    border-radius: 5px,
+    margin-bottom: 5px
+}
